--- a/Objects/tokenring_project.build_log.htm
+++ b/Objects/tokenring_project.build_log.htm
@@ -27,9 +27,22 @@ Project File Date:  04/20/2021
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling time_sender.c...
+compiling time_receiver.c...
+compiling mac_sender.c...
+compiling touch.c...
+compiling chat_sender.c...
+compiling chat_receiver.c...
+compiling lcd.c...
 compiling main.c...
+compiling mac_receiver.c...
+compiling phy_receiver.c...
+compiling mac.c...
+compiling debug.c...
+compiling audio.c...
+compiling phy_sender.c...
 linking...
-Program Size: Code=98288 RO-data=18792 RW-data=101940 ZI-data=80500  
+Program Size: Code=99116 RO-data=18792 RW-data=101940 ZI-data=80500  
 ".\Objects\tokenring_project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -459,7 +472,7 @@ Package Vendor: Keil
       Include file:  ugfx\src\gwin\gwin_image.h
       Include file:  ugfx\src\gwin\gwin_rules.h
       Include file:  ugfx\src\gwin\gwin_tabset.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:11
 </pre>
 </body>
 </html>
